# daily_python

./: .gitignore  README.md  pyproject.toml
aula01/: README.md  kpi.py
aula02/: README.md  desafio.py
aula03/: README.md  desafio.py
aula04/: exercicio_1.py  exercicio_10.py  exercicio_11.py  exercicio_12.py  exercicio_13.py  exercicio_14.py  exercicio_15.py  exercicio_16.py  exercicio_17.py  exercicio_18.py  exercicio_19.py  exercicio_2.py  exercicio_20.py  exercicio_3.py  exercicio_4.py  exercicio_5.py  exercicio_6.py  exercicio_7.py  exercicio_8.py  exercicio_9.py
aula07/: exercicio_1.py  exercicio_2.py  exercicio_3.py  exercicio_4.py  exercicio_5.py  exercicio_6.py  projeto.py
aula08/: etl.py  pipeline.py
aula09/: etl.py  pipeline.py  readme.md  timer_decorator.py
aula09/decorators/: data_quality_decorator.py  log_decorator.py
aula11/: exemplo_csv.py  exemplo_etl.py
aula11/classes/: csv_processor.py  etl.py
aula12/: main.py
aula12/src/interface/classes/: csv_processor.py
aula17/: main.py  models.py  queries.py
aula18/: README.md
aula18/src/: controller.py  db.py  main.py  models.py  schema.py
topicos_avancados/closures/: exercicios.ipynb  readme.md
topicos_avancados/decorators/: readme.md
topicos_avancados/higher_order_functions/: exercicios.ipynb  readme.md
topicos_avancados/lambda_functions/: anotacoes.md  exercicios.ipynb  readme.md
