[tool.poetry]
name = "daily-python"
version = "0.1.0"
description = ""
authors = ["alice7lima <alice7252011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
flake8 = "^7.2.0"
pandas = "^2.3.0"
pyarrow = "^20.0.0"
loguru = "^0.7.3"
sqlalchemy = "^2.0.41"
fastapi = {extras = ["standard"], version = "^0.116.1"}
uvicorn = "^0.35.0"
streamlit = "^1.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
